--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,7 +1,15 @@
 .row {
     @mixin clearfix;
 
-    /* &--gutters {
+    &--gutters {
+        margin-right: -60px;
+    }
+
+     &--gutters > div {
+        padding-right: 50px;
+    }
+
+    &--gutters {
         margin-right: -65px;
     }
 
@@ -18,11 +26,11 @@
     }
 
     &--gutters-large {
-        margin-right: -100px;
+        margin-right: -5px;
     }
 
     &--gutters-large > div {
-        padding-right: 100px;
+        padding-right: 5px;
     }
 
     &__b-margin-until-medium {
@@ -31,7 +39,7 @@
 
     &--t-padding {
         padding-top: 80px;
-    } */
+    }
 
     @mixin atMedium {
         
@@ -86,7 +94,7 @@
 
         &__large-4 {
             float: left;
-            width: 5%;
+            width: 33%;
         }
 
         &__large-4--larger { 
