--- a/app/assets/styles/modules/_form.css
+++ b/app/assets/styles/modules/_form.css
@@ -1,25 +1,110 @@
 .form{
-    
-    margin: 50px 0 50px 0;
-
-    &__input{
-        padding:.25rem;
-        border-radius: 2%;
-        margin:0px;
-        width: 30%;
-    }
-
-    &__label{
-        position:relative;
-        top:-35px;
-        left: 80px;
-    }
+    margin: 0 auto;
+    margin-bottom:50px;
+    width: 90%;
 
     &__btn{
-        background-color: $mainOrange;
-        float:right;
-        margin-right: 50px;
-         padding:.25rem;
+        display: block;
+        border: none;
+        text-decoration: none;
+        background: $mainBlue;
+        color: #ffffff;
+        font-family: sans-serif;
+        cursor: pointer;
+        text-align: center;
+        transition: background 250ms ease-in-out, 
+                    transform 150ms ease;
+    }
+
+    &__btn:hover,
+    &__btn:focus {
+        background: $mainOrange;
+    }
+
+    &__btn:focus {
+        outline: 1px solid #fff;
+        outline-offset: -4px;
+    }
+
+    &__btn:active {
+        transform: scale(0.90);
+    }
+    
+
+    @mixin atLarge {
+        
+        &__btn{
+            transform: translate(-10%, 190%) !important;
+        }
+
+        &__input{
+            padding:.25rem;
+            border-radius: 2%;
+            margin: 10px;
+            float: right;
+            width: 80%;
+        }
+
+
+        &__label{
+            margin: 0px;
+            margin-top: 0px;
+            top: 10px;
+            left: 30px;
+            position:relative;
+        }
+
+
+
+    }
+
+    @mixin atMedium {
+
+        
+        &__btn{
+            padding: .35rem;
+            width: 50%;
+            margin: 0 10px;
+            float: right;
+            font-size: 1rem;
+            transform: translateY(65%);
+        }
+
+   
+        &__input{
+            padding:.25rem;
+            border-radius: 2%;
+            margin: 10px;
+            float: right;
+            width: 80%;
+        }
+
+        &__label{
+            margin: 10px;
+            margin-top: 18px;
+            float: left;
+            position:relative;
+        }
+
+
+    }
+
+
+    @mixin atSmall {
+/* 
+        &__input{
+            padding:.25rem;
+            border-radius: 2%;
+            margin:0px;
+            width: 100%;
+        }
+
+        &__label{
+            position:relative;
+            top:-5px;
+        } */
+
+
     }
 
     
