--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -1,9 +1,14 @@
 .header{
     margin-top:0px;
     width: 100%;
-    height: 12.50rem;
+    height: 5rem;
     background-color:$mainBlue; 
     color:#FFF;
     text-align: center;
-    padding-top: 50px;
+    padding-top: 1.4375rem;
+
+    & h1{
+        margin: 0;
+        padding: 0px;
+    }
 }
