--- a/app/assets/styles/modules/_form.css
+++ b/app/assets/styles/modules/_form.css
@@ -3,6 +3,31 @@
     margin-bottom:50px;
     width: 90%;
 
+    &__input{
+        padding:.25rem;
+        border-radius: 2%;
+        margin: 10px;
+        float: right;
+        width: 50%;
+    }
+
+    &__label{
+        margin: 10px;
+        margin-top: 18px;
+        float: left;
+        position:relative;
+    }
+    
+
+    &__btn{
+            padding: .35rem;
+            width: 50%;
+            margin: 0 10px;
+            float: right;
+            font-size: 1rem;
+            transform: translateY(65%);
+    }
+
     &__btn{
         display: block;
         border: none;
@@ -60,23 +85,13 @@
 
     @mixin atMedium {
 
-        
-        &__btn{
-            padding: .35rem;
-            width: 50%;
-            margin: 0 10px;
-            float: right;
-            font-size: 1rem;
-            transform: translateY(65%);
-        }
-
    
         &__input{
             padding:.25rem;
             border-radius: 2%;
             margin: 10px;
             float: right;
-            width: 80%;
+            width: 80%!important;
         }
 
         &__label{
@@ -91,18 +106,22 @@
 
 
     @mixin atSmall {
-/* 
-        &__input{
+
+
+         &__input{
             padding:.25rem;
             border-radius: 2%;
-            margin:0px;
-            width: 100%;
+            margin: 10px;
+            float: right;
+            width: 70%!important;
         }
 
         &__label{
+            margin: 10px;
+            margin-top: 18px;
+            float: left;
             position:relative;
-            top:-5px;
-        } */
+        }
 
 
     }
