--- a/app/assets/styles/modules/_form.css
+++ b/app/assets/styles/modules/_form.css
@@ -7,25 +7,22 @@
         padding:.25rem;
         border-radius: 2%;
         margin: 10px;
-        float: right;
-        width: 50%;
+        width: 90%;
     }
 
     &__label{
         margin: 10px;
         margin-top: 18px;
-        float: left;
         position:relative;
     }
     
 
     &__btn{
-            padding: .35rem;
-            width: 50%;
-            margin: 0 10px;
-            float: right;
-            font-size: 1rem;
-            transform: translateY(65%);
+        padding: .35rem;
+        width: 90%;
+        margin: 0 10px;
+        font-size: 1rem;
+        transform: translateY(50%);
     }
 
     &__btn{
@@ -37,91 +34,52 @@
         font-family: sans-serif;
         cursor: pointer;
         text-align: center;
-        transition: background 250ms ease-in-out, 
-                    transform 150ms ease;
+        /* transition: background 250ms ease-in-out, 
+                    transform 150ms ease; */
     }
 
-    &__btn:hover,
-    &__btn:focus {
+    &__btn:hover {
         background: $mainOrange;
-    }
-
-    &__btn:focus {
         outline: 1px solid #fff;
         outline-offset: -4px;
     }
 
-    &__btn:active {
+   
+
+    /* &__btn:active {
         transform: scale(0.90);
-    }
+    } */
     
 
     @mixin atLarge {
-        
-        &__btn{
-            transform: translate(-10%, 190%) !important;
+        &__btn{ 
+            transform: translateY(96%);
         }
-
-        &__input{
-            padding:.25rem;
-            border-radius: 2%;
-            margin: 10px;
-            float: right;
-            width: 80%;
-        }
-
-
-        &__label{
-            margin: 0px;
-            margin-top: 0px;
-            top: 10px;
-            left: 30px;
-            position:relative;
-        }
-
-
-
     }
 
     @mixin atMedium {
-
-   
         &__input{
-            padding:.25rem;
             border-radius: 2%;
             margin: 10px;
-            float: right;
-            width: 80%!important;
+            width: 97%!important;
         }
 
-        &__label{
+        &__btn{ 
+            width: 97%!important;
+        }
+
+        /* &__label{
             margin: 10px;
             margin-top: 18px;
-            float: left;
             position:relative;
-        }
-
-
+        } */
+         
     }
 
 
     @mixin atSmall {
 
-
-         &__input{
-            padding:.25rem;
-            border-radius: 2%;
-            margin: 10px;
-            float: right;
-            width: 70%!important;
-        }
-
-        &__label{
-            margin: 10px;
-            margin-top: 18px;
-            float: left;
-            position:relative;
-        }
+       
 
 
     }
