--- a/app/assets/styles/modules/_metrics.css
+++ b/app/assets/styles/modules/_metrics.css
@@ -1,69 +1,90 @@
 .metrics{
 
-    
-    width: 100%;
-    text-align: left;
-    padding-right: 50px;
-    padding-left: 50px;
-    margin-bottom: 50px;
+     display: none;
 
-    & .headline{
-        margin-bottom: 150px;
-    }
-
-    &__label{
+      @mixin atLarge {
+        display: block;
         width: 100%;
-        font-size: 1.875rem;
-        margin-top: 100px;
-        text-align: center;
+        text-align: left;
+        padding-right: 50px;
+        padding-left: 50px;
+        margin-bottom: 50px;
 
-    }
-
-    &__label:first-child {
-        margin-top: 50px;
-    }
-
-    &__value{
-        margin-top: 100px;
-        font-size: 1.875rem;
-        text-align: center;
-        transition: all .3s ease-out;
-
-        &--ascii{
-            color: red;
+        & .headline{
+            margin-bottom: 200px;
         }
 
-        &--ascii:hover{
-            color: blue;
-            transform: scale(3); 
-            transform-origin: 50% 50%;
+
+        &__label{
+            width: 100%;
+            font-size: 1.875rem;
+            margin-top: 100px;
+            text-align: center;
+
         }
+
+        &__label:first-child {
+            margin-top: 50px;
+        }
+
+        &__value{
+            margin-top: 100px;
+            font-size: 1.875rem;
+            text-align: center;
+            transition: all .3s ease-out;
+
+            &--ascii{
+                color: red;
+            }
+
+            &--ascii:hover{
+                color: blue;
+                transform: scale(3); 
+                transform-origin: 50% 50%;
+            }
+            
+
+            &--zeros{
+                color: green;
+            }
+
+            &--zeros:hover{
+                color: blue;
+                transform: scale(3); 
+                transform-origin: 50% 50%;
+            }
+
+            &--binary{
+            color: yellow; 
+            }
+
+            &--binary:hover{
+                color: blue;
+                transform: scale(2); 
+                transform-origin: 50% 50%;
+            }
+
+      }
+
+    @mixin atMedium {
+
         
-
-        &--zeros{
-            color: green;
-        }
-
-        &--zeros:hover{
-            color: blue;
-            transform: scale(3); 
-            transform-origin: 50% 50%;
-        }
-
-        &--binary{
-           color: yellow; 
-        }
-
-        &--binary:hover{
-            color: blue;
-            transform: scale(2); 
-            transform-origin: 50% 50%;
-        }
     }
 
     &__value:first-child {
         margin-top: 50px;
     }
+
+        
+
+      }
+
+    @mixin atSmall {
+ 
+        
+      }
+
+    
 
     
 
